# OpenBarista

./: .gitignore  Cargo.toml  README.md  build.rs  sdkconfig.defaults
.cargo/: config.toml
.esp/: export-esp.sh
.github/workflows/: esp32-release.yml
assets/portal/: index.html  portal.css  portal.js  success.html
assets/station/: base.css  history.css  history.html  history.js  index.html  settings.css  settings.html  settings.js  station.css  station.js
docs/: _config.yml  dashboard.md  flashing.md  hardware.md  index.md  scale.md  setup.md  wiring.md
main/: idf_component.yml
scripts/: bootstrap.sh  build.sh  flash.sh  headless_ui.py
src/: lib.rs  main.rs  scale_ble.rs  scale_weight.rs  shot_history.rs  shot_recorder.rs  shot_store.rs  sync_utils.rs  telemetry_feed.rs  telemetry_math.rs  web_assets.rs  wifi_provision.rs
src/scale_ble/: discovery.rs  mod.rs  nimble.rs  protocol.rs  types.rs  util.rs  watchdog.rs  weight.rs  worker.rs
src/sensors/: pressure.rs  temperature.rs
src/wifi_provision/: captive.rs  http.rs  mod.rs  nvs.rs  station.rs
