[package]
name = "openbarista"
version = "0.1.0"
edition = "2021"
resolver = "2"

[[bin]]
name = "openbarista"
harness = false

[profile.release]
opt-level = "s"

[profile.dev]
debug = true
opt-level = "z"

[features]
default = ["std", "esp-idf-svc/native"]
pio = ["esp-idf-svc/pio"]
std = ["alloc", "esp-idf-svc/binstart", "esp-idf-svc/std", "esp-idf-hal/std"]
alloc = ["esp-idf-svc/alloc", "esp-idf-hal/alloc"]
nightly = ["esp-idf-svc/nightly"]
experimental = ["esp-idf-svc/experimental"]

[dependencies]
anyhow = "1"
embedded-hal = "1"

[target.'cfg(target_arch = "xtensa")'.dependencies]
esp-idf-hal = { version = "0.46", default-features = false }
esp-idf-svc = { version = "0.52", default-features = false }
# Pinned to the exact version that esp-idf-svc 0.52 pulls in, so there is only
# one copy of the crate in the graph and the Headers trait resolves correctly.
embedded-svc = "=0.29.0"

[build-dependencies]
embuild = { version = "0.33", features = ["espidf"] }

[package.metadata.esp-idf-sys]
esp_idf_tools_install_dir = "global"
esp_idf_version = "v5.4.3"

# espressif/mdns was removed from built-in ESP-IDF components in v5.x and is
# now a managed component. This entry tells esp-idf-sys to pull it in via the
# IDF Component Manager and include it in the build.
[[package.metadata.esp-idf-sys.extra_components]]
remote_component = { name = "espressif/mdns", version = ">=1.0" }